# soksak-contract-terminal

./: .gitignore  Cargo.toml  README.md  SPEC.md
.github/workflows/: test.yml
goldens/: alt_screen.after.golden  alt_screen.golden  cjk_width.golden  cold_paint_alt.cold.golden  cold_paint_alt.golden  dec_line_drawing.golden  mid_escape_tail.golden  private_modes.golden  replay_guard.golden
scripts/: frontend-demand.sh  gate.sh
src/: bench.rs  corpus.rs  daemon_demand.rs  demand.rs  golden.rs  lib.rs  state.rs
tests/: bench_table.rs  daemon_demand.rs  demand.rs  goldens_cite_specs.rs
