# soksak-contract-terminal — the contract soksak-sidecar-terminal-spec@1 and its acceptance suite.
#
# Nothing here runs and nothing here ships: no binary, no dist, no registry entry. Engine units
# consume it as a dev-dependency, and that is the only way it is consumed.
#
# It has no VT engine — not even as a dependency. The standard is the declared goldens, not what
# any implementation happens to do, so no engine is first-class here.
[package]
name = "soksak-contract-terminal"
version = "0.0.1"
edition = "2021"
publish = false
description = "The soksak-sidecar-terminal-spec@1 contract: the canonical screen state, the declared goldens, the corpus, and the acceptance assertions every engine unit is graded by."

[lib]
name = "soksak_contract_terminal"
path = "src/lib.rs"

[dependencies]
# 엔진은 없다. libc 는 엔진이 아니라 커널이다 — 예산의 근거인 수요(실 PTY 처리량 천장,
# src/demand.rs)를 재려면 진짜 PTY 가 필요하고, forkpty 는 OS 가 그것을 여는 유일한 문이다.
libc = "0.2"

# Independent workspace — it sits beside the units, not inside one.
[workspace]
