# soksak-contract-terminal — the contract soksak-spec-sidecar-terminal and its acceptance suite.
#
# Nothing here runs and nothing here ships: no binary, no dist, no registry entry. Engine units
# consume it as a dev-dependency, and that is the only way it is consumed.
#
# It has no VT engine — not even as a dependency. The standard is the declared goldens, not what
# any implementation happens to do, so no engine is first-class here.
[package]
name = "soksak-contract-terminal"
version = "0.0.1"
edition = "2021"
publish = false
description = "The soksak-spec-sidecar-terminal contract: the canonical screen state, the declared goldens, the corpus, and the acceptance assertions every engine unit is graded by."

[lib]
name = "soksak_contract_terminal"
path = "src/lib.rs"

[dependencies]
# 엔진도, 코어도, 아무것도 없다. 수요(src/daemon_demand.rs)는 실 데몬 **바이너리**를 세워
# 문서화된 배선(SPEC.md §6.1·§6.2)으로 말을 거는 것이지, 코어 크레이트를 링크하는 것이 아니다.

# Independent workspace — it sits beside the units, not inside one.
[workspace]
